--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // Thymeleaf 의존성 추가
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1' // MyBatis Spring Boot Starter
+    runtimeOnly 'mysql:mysql-connector-java:8.0.33' // 최신 버전 사용
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc' // JDBC 지원
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
